fix overflow

--- a/numerc/static/numerc/styles.css
+++ b/numerc/static/numerc/styles.css
@@ -176,7 +176,6 @@
 		background-color: var(--page);
 	}
 	div.content {
-		overflow-x: hidden;
 		margin-bottom: 5rem;
 		background-color: var(--page);
 	}
@@ -867,15 +866,13 @@
 			margin: 0 auto;
 			padding: 0.1em 0.4em;
 			padding-top: 0.2em;
-			background-color: var(--lightOrange);
-			border: thin solid var(--darkOrange);
 		}
 		ul.syntax li {
 			padding: 0;
 			margin: 0;
 			list-style-type: none;
 			font-family: "Fira";
-			font-size: 0.7rem;
+			font-size: 0.8rem;
 		}
 		ul.syntax li .katex  {
 			font-size: 1.1em !important;
